<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_nav" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settingsAlertsSound"
            android:summary="@string/settings_alerts_sound_summary"
            android:title="@string/settings_alerts_sound" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settingsDisplayOrientation"
            android:summary="@string/settings_display_orientation_summary"
            android:title="@string/settings_display_orientation" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_route" >
        <ListPreference
            android:defaultValue="driving"
            android:key="settingsTransport"
            android:title="@string/settings_transport"
            android:summary=""
            android:entries="@array/settings_transport_entries"
            android:entryValues="@array/settings_transport_values" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settingsAvoidTolls"
            android:title="@string/settings_avoid_tolls"
            android:summary="@string/settings_avoid_tolls_summary" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settingsAvoidHighways"
            android:title="@string/settings_avoid_highways"
            android:summary="@string/settings_avoid_highways_summary" />
    </PreferenceCategory>

</PreferenceScreen>